# memory_signature

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  library.h
include/: memory_signature.hpp
test/: CMakeLists.txt  main.cpp
